# MindMemOS

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_ZH.md  pyproject.toml
src/mindmemos/: pyproject.toml
src/mindmemos/mindmemos/: provider_bindings.py
src/mindmemos/mindmemos/api/: algorithm.py  app.py  deps.py  internal_routes.py  mappers.py  routes.py  schemas.py  skill_routes.py  skill_schemas.py
src/mindmemos/mindmemos/api/auth/: __init__.py  api_key.py  base.py  gateway_jwt.py  internal_token.py  registry.py
src/mindmemos/mindmemos/api/services/: __init__.py  memory_service.py  skill_service.py
src/mindmemos/mindmemos/components/: __init__.py  id.py
src/mindmemos/mindmemos/components/activity/: __init__.py  collector.py
src/mindmemos/mindmemos/components/chunker/: __init__.py  episodes_chunker.py  segmenter.py
src/mindmemos/mindmemos/components/dreaming/: __init__.py  action_planning.py  relation_detection.py
src/mindmemos/mindmemos/components/extractor/: __init__.py  _records.py  protocols.py
src/mindmemos/mindmemos/components/feedback/: __init__.py  action_planner.py  explicit_planner.py  query_rewriter.py  rounds.py  signal.py
src/mindmemos/mindmemos/components/kafka/: __init__.py
src/mindmemos/mindmemos/components/searcher/: __init__.py  (+6 more)
src/mindmemos/mindmemos/config/: __init__.py  app.py  base.py  context.py  validation.py
src/mindmemos/mindmemos/errors/: __init__.py  activity.py  api.py  base.py  config.py  llm.py  memory.py  skill.py
src/mindmemos/mindmemos/infra/: __init__.py  retry.py  telemetry.py
src/mindmemos/mindmemos/llm/: __init__.py  chat.py  embedding.py  registry.py  rerank.py  router.py
src/mindmemos/mindmemos/logging/: __init__.py  tracing.py
src/mindmemos/mindmemos/mappers/: __init__.py  api.py  db.py  errors.py  result.py  search_filters.py  skill.py
src/mindmemos/mindmemos/pipelines/: __init__.py  base.py  registry.py
src/mindmemos/mindmemos/prompts/: __init__.py
src/mindmemos/mindmemos/typing/: __init__.py  activity.py  algo.py  llm.py  memory.py  memory_db.py  service.py  skill.py
src/mindmemos/mindmemos/workers/: __init__.py  memory_add.py  memory_dreaming.py  memory_feedback.py  runtime.py  schema_add_drain.py  schema_add_episode.py  skill_evolve.py
src/mindmemos_eval/: pyproject.toml
src/mindmemos_eval/mindmemos_eval/: __init__.py  cli.py  llm.py
src/mindmemos_eval/mindmemos_eval/memory/: __init__.py  base.py  config.py  db_reset.py  identity.py  manifest.py  metrics.py  runner.py  scorer.py  tokens.py
src/mindmemos_eval/mindmemos_eval/skills/: __init__.py  args.py  runners.py
src/mindmemos_sdk/: README.md  pyproject.toml
src/mindmemos_sdk/mindmemos_sdk/: __init__.py  cli.py  client.py  errors.py  transport.py
src/mindmemos_sdk/mindmemos_sdk/config/: __init__.py  manager.py  models.py
src/mindmemos_sdk/mindmemos_sdk/memory/: __init__.py  async_client.py  client.py  core.py  models.py
src/mindmemos_sdk/mindmemos_sdk/skills/: __init__.py  bundle.py  cloud.py  detector.py  history.py  installer.py  manager.py  models.py  pending.py  registry.py
src/mindmemos_sdk/mindmemos_sdk/ui/: __init__.py  server.py
(+475 files in other folders)
