[project]
name = "mindmemos"
version = "0.1.3"
description = "MindMemOS agent memory system"
authors = []
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiokafka>=0.14.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "litellm>=1.85.0",
    "neo4j>=6.2.0",
    "numpy>=2.3.5",
    "omegaconf",
    "opentelemetry-api>=1.42.0",
    "opentelemetry-exporter-otlp-proto-http>=1.42.0",
    "opentelemetry-sdk>=1.42.0",
    "pydantic",
    "python-dotenv>=1.2.2",
    "pyyaml",
    "qdrant-client>=1.18.0",
    "spacy>=3.8.14",
    "structlog>=25.5.0",
    "traced>=0.1.5",
    "uvicorn>=0.47.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
