[project]
name = "mindmemos-eval"
version = "0.0.1"
description = "Evaluation package for MindMemOS"
authors = []
requires-python = ">=3.11,<3.14"
dependencies = [
    "datasets>=5.0.0",
    "mindmemos-sdk>=0.1.0",
    "nltk>=3.9.4",
    "openai>=2.37.0",
    "openpyxl>=3.1.5",
    "pydantic",
    "python-dateutil>=2.9.0.post0",
    "pyyaml",
    "qdrant-client>=1.18.0",
    "rouge-score>=0.1.2",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
