[project]
name = "mindmemos-sdk"
version = "0.1.3"
description = "Python SDK and CLI for MindMemOS"
readme = "README.md"
authors = []
requires-python = ">=3.10,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic",
    "pyyaml",
]

[project.scripts]
mindmemos = "mindmemos_sdk.cli:main"

[project.urls]
Homepage = "https://github.com/mindscale-noah/MindMemOS"
Repository = "https://github.com/mindscale-noah/MindMemOS"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
